[workspace]
members = [
    "jupiter-core",
]

[workspace.package]
edition = "2021"

[workspace.dependencies]
anchor-lang = "0.30.1"
anchor-syn = "0.30.1"
solana-sdk = "^1.17.3"
solana-client = "^1.17.3"
solana-account-decoder = "^1.17.3"
solana-program-test = "^1.17.3"
tokio = { version = "1", features = ["full"] }

anchor-gen = { git = "https://github.com/jup-ag/anchor-gen.git", rev = "26c04a10d20509f360ab176d003bea4c625b16f2" }
jupiter-amm-interface = "=0.4.4"

# SPL
spl-token = { version = "3.5", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "2.1.0", features = [
    "no-entrypoint",
] }
spl-token-2022 = { version="0.6.1", features = [
    "no-entrypoint",
] }
